added mps things to presentation

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -69,6 +69,7 @@ style=authoryear,
 \DeclareMathOperator{\lin}{lin}
 \DeclareMathOperator{\pr}{pr}
 
+\newcommand{\clin}{\overline{\lin}}
 
 \title[MEF]{Project 8: Maximal Equicontinuous Factor}
 \author{Matti Bleckmann, Jannik Daun, Pablo Lummerzheim}
