--- a/presentation/sections/equicontinuity.tex
+++ b/presentation/sections/equicontinuity.tex
@@ -51,9 +51,9 @@
 	\begin{definition}[Conjugated and Equivalent factors]
 		Let $(Y, T)$ and $(Z, T)$ be two factors of $(X, T)$ with factor maps $\pi$ and $\rho$.
 		
-		The factors are \textbf{conjugated} if $(Y, T) \cong (Z, T)$.
+		The factors are \textbf{equivalent} if $R_\pi = R_\rho$.
 		
-		The factors are \textbf{equivalent} if $R_\pi = R_\rho$. In this case they are also conjugated.
+		The factors are \textbf{conjugated} if $(Y, T) \cong (Z, T)$.
 	\end{definition}
 \end{frame}
 
@@ -66,7 +66,7 @@
 		for all $x, y \in X$ and $t \in T$.
 	\end{definition}
 	\begin{remark}
-		Intuitively equicontinuity means that two points that are close, were and will be always close.
+		Intuitively equicontinuity means that two points that are close, were always and will always be close.
 	\end{remark}
 	\begin{proposition}
 		Let $d, \tilde{d}$ be two metrics on $X$, that induce the same topology. Then $(x, T)$ is equicontinuous with respect to $d$ if and only if it is equicontinuous with respect to $\tilde{d}$.
@@ -107,16 +107,16 @@
 					\draw[very thick] (0, 0) circle (2) node[scale=1.5] {$\mathbb{S}$};
 					\draw[very thick] (1.8, 0) -- (2.2, 0);
 					
-					\filldraw[color=red] (0, 2) circle (.1) node[anchor=south, scale=1.5] {$x$};
-					\filldraw[color=red] (-1.284, -1.532) circle (.1) node[anchor=east, scale=1.5] {$\alpha(x)$};
-					\filldraw[color=red] (1.970, .347) circle (.1) node[anchor=west, scale=1.5] {$\alpha^2(x)$};
+					\filldraw[color=red] ([shift={(90:2)}]0, 0) circle (.1) node[anchor=south, scale=1.5] {$x$};
+					\filldraw[color=red] ([shift={(230:2)}]0, 0) circle (.1) node[anchor=east, scale=1.5] {$\alpha(x)$};
+					\filldraw[color=red] ([shift={(370:2)}]0, 0) circle (.1) node[anchor=west, scale=1.5] {$\alpha^2(x)$};
 					
 					\draw[ultra thick, color=yellow, ->] (0, 2) arc (90:230:2) node[above, midway, scale=1.5] {$a$};
 					\draw[ultra thick, color=yellow, ->] (-1.284, -1.532) arc (230:370:2) node[right, midway, scale=1.5] {$a$};
 					
-					\filldraw[color=blue] (-0.684, 1.879) circle (.1) node[anchor=east, scale=1.5] {$y$};
-					\filldraw[color=blue] (-0.684, -1.879) circle (.1) node[anchor=north, scale=1.5] {$\alpha(y)$};
-					\filldraw[color=blue] (1.732, 1) circle (.1) node[anchor=west, scale=1.5] {$\alpha^2(y)$};
+					\filldraw[color=blue] ([shift={(110:2)}]0, 0) circle (.1) node[anchor=east, scale=1.5] {$y$};
+					\filldraw[color=blue] ([shift={(250:2)}]0, 0) circle (.1) node[anchor=north, scale=1.5] {$\alpha(y)$};
+					\filldraw[color=blue] ([shift={(390:2)}]0, 0) circle (.1) node[anchor=west, scale=1.5] {$\alpha^2(y)$};
 					
 					\draw[ultra thick, color=orange] (0, 2) arc (90:110:2) node[below, midway, scale=1.5] {$\delta$};
 					\draw[ultra thick, color=orange] (-1.284, -1.532) arc (230:250:2) node[above, midway, scale=1.5] {$\delta$};
