--- a/presentation/sections/skew-rotation.tex
+++ b/presentation/sections/skew-rotation.tex
@@ -1,7 +1,7 @@
 \section{Example: Skew-Rotation}
 
 \begin{frame}
-	Fix $a \in R \setminus \mathbb{Q}$ and look at $\mathbb{T}^2 = \mathbb{R}/\mathbb{Z} \times \mathbb{R}/\mathbb{Z}$ with the skew rotation $\beta: \mathbb{T}^2 \to \mathbb{T}^2$ with
+	Fix $a \in \mathbb{R} \setminus \mathbb{Q}$ and look at $\mathbb{T}^2 = \mathbb{R}/\mathbb{Z} \times \mathbb{R}/\mathbb{Z}$ with the skew rotation $\beta: \mathbb{T}^2 \to \mathbb{T}^2$ with
 	\begin{align*}
 		\beta([x_1], [x_2]) := ([x_1+a], [x_2+x_1]).
 	\end{align*}
@@ -60,4 +60,47 @@
 			\draw[ultra thick, color=orange] (8.5, 0) arc(0:20:2) node[left, midway, scale=1.5] {$\delta_1$};
 		\end{tikzpicture}
 	\end{figure}
+\end{frame}
+
+\begin{frame}
+	\begin{example}
+		The MEF of the skew-ration $(\mathbb{T}^2, \beta)$ is given by the circle rotation $(\mathbb{T}, \alpha)$ with factor map $\pi$ given by $([x_1], [x_2]) \mapsto [x_1]$.
+	\end{example}
+	We need to prove that
+	\begin{align*}
+		Q_2(\mathbb{T}^2) = R_\pi = \{(([x_1], [x_2]), ([y_1], [y_2])) \in \mathbb{T}^2 \times \mathbb{T}^2;\ [x_1] = [y_1]\}.
+	\end{align*}
+	\medskip
+
+	We already know that $(\mathbb{T}, \alpha)$ is equicontinuous, which implies $Q_2(\mathbb{T}^2) \subseteq R_\pi$.
+\end{frame}
+
+\begin{frame}
+	For the other direction we prove that $(([z], [x]), ([z], [y])) \in R_\pi$ is regional proximal.
+	\medskip
+	
+	Fix $\varepsilon > 0$. W.l.o.g. $0 \leq x \leq y < 1$. Choose some $0 < b < \frac{\varepsilon}{2}$ and $n \in \mathbb{N}$ such that
+	\begin{align*}
+		0 < (y-x) - nb < \frac{\varepsilon}{2}.
+	\end{align*}
+	\medskip
+	
+	Then $([z+b], [x])$ and $([z], [y])$ are in the $\varepsilon$ neighborhoods of $([z], [x])$ and $([z], [y])$ respectively and
+	\begin{align*}
+		&d_{\mathbb{T}^2}(\beta^n([z+b], [x]), \beta^n([z], [y]))\\
+		= &d_{\mathbb{T}^2}(([z+b+na], [x + n(z+b) + \frac{n(n+1)}{n}a]), ([z+na], [y + nz + \frac{n(n+1)}{2}a]))\\
+		\leq &b + x - y - nb < \frac{\varepsilon}{2} + \frac{\varepsilon}{2} = \varepsilon
+	\end{align*}
+
+	\begin{definition}[Regional Proximal]
+		Two points $x,y \in X$ are called \emph{regionally proximal}
+		if for each $\varepsilon > 0$ there exist $x' \in B_\varepsilon(x), y' \in B_\varepsilon(y)$
+		and $t \in T$ such that $d(tx', ty') < \varepsilon$.
+	\end{definition}
+	\begin{remark}
+		Note that for $([z], [x]) \in \mathbb{T}^2$ and $n \in \mathbb{N}$ we have
+		\begin{align*}
+			\beta^n([z], [x]) = ([z+na], [x + nz + \frac{n(n-1)}{2}a]).
+		\end{align*}
+	\end{remark}
 \end{frame}
