--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -68,6 +68,7 @@ style=authoryear,
 % \newtheorem{definition}[theorem]{Definition}
 \DeclareMathOperator{\lin}{lin}
 \DeclareMathOperator{\pr}{pr}
+\DeclareMathOperator{\ev}{eval}
 
 \newcommand{\clin}{\overline{\lin}}
 
