change to one bib file

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -30,7 +30,7 @@ backend=biber,
 style=authoryear,
 %sorting=ynt
 ]{biblatex}
-\addbibresource{references.bib}
+\addbibresource{../references.bib}
 \setbeamertemplate{bibliography item}{}
 \DeclareNameAlias{sortname}{given-family}
 
