--- a/presentation/sections/rpr.tex
+++ b/presentation/sections/rpr.tex
@@ -170,16 +170,5 @@ The equicontinuous factor is the identity map with $\Delta(X)$ as ICER.
   Then $Q_2(X) = R$.
 \end{theorem}
   Note that minimality is important for $Q_2(X)$ being an equivalence relation (see Example).
-\end{frame}
-
-\begin{frame}
-  {\color{red} nicht konsitent}
-  \begin{example}[skew rotation]
-    Recall the torus example from above.
-    We consider the two-dimensional torus with the product-$1$-norm
-    and action
-    \[ \alpha : \mathbb{T} \to \mathbb{T}, \alpha([x], [y]) = ([x + a], [x + y]). \]
-    with $a \in \mathbb{R}$
-
-  \end{example}
+  For a proof see \cite[p.130, Thm. 8.]{Auslaner}.
 \end{frame}
