section about meq

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -93,6 +93,7 @@ style=authoryear,
 \subfile{sections/mef.tex}
 \subfile{sections/rpr.tex}
 \subfile{sections/skew-rotation.tex}
+\subfile{sections/meq.tex}
 
 
 \section*{}
