--- a/sections/m-equicontinuity.tex
+++ b/sections/m-equicontinuity.tex
@@ -1,6 +1,6 @@
 \section{$m$-Equicontinuity}
 \begin{definition}[$m$-Equicontinuity]
-	Fix $m \in \mathbb{N}$. Then $(X, T)$ is \emph{$m$-equicontinuous} if for all $\varepsilon > 0$ there exists a $\delta > 0$, such that for all $U \subseteq X$ open with $\operatorname{diam}(U) < \delta$, $x_1, \dots, x_m \in U$ and $t \in T$ there are $i, j \in \{1, \dots, m\}$ with $i \neq j$ such that $d(tx, ty) < \varepsilon$.
+	Fix $m \in \mathbb{N}$. Then $(X, T)$ is \emph{$m$-equicontinuous} if for all $\varepsilon > 0$ there exists a $\delta > 0$, such that for all $U \subseteq X$ open with $\operatorname{diam}(U) < \delta$, $x_1, \dots, x_m \in U$ and $t \in T$ there are $i, j \in \{1, \dots, m\}$ with $i \neq j$ such that $d(tx_i, tx_j) < \varepsilon$.
 \end{definition}
 
 \begin{proposition}
