removed unused package

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -10,8 +10,6 @@
 \usepackage{hyperref}
 \usepackage{amsthm}
 \usepackage{amssymb}
-\usepackage{transparent}
-\usepackage{siunitx}
 \usepackage{csquotes}
 \usepackage{graphicx}
 \usepackage{subfiles}
@@ -72,7 +70,7 @@ style=authoryear,
 
 \newcommand{\clin}{\overline{\lin}}
 
-\title[MEF]{Project 8: Maximal Equicontinuous Factor}
+\title[Maximla Equicontinuous Factor]{Project 8: Maximal Equicontinuous Factor}
 \author{Matti Bleckmann, Jannik Daun, Pablo Lummerzheim}
 %\institute{}
 \date{ISEM28, 2025}
