--- a/presentation/sections/mef.tex
+++ b/presentation/sections/mef.tex
@@ -3,7 +3,7 @@
 \begin{frame}
   Let $(X,T)$ be a TDS.
   \begin{definition}[Maximal equicontinuous factor (MEF)]
-    A factor $\pi : (X,T) \to (Y,T)$ is a \emph{MEF} of $(X,T)$ if and only if
+    A factor $\pi : (X,T) \to (Y,T)$ is a \textbf{MEF} of $(X,T)$ if and only if
   \begin{itemize}
     \item $\pi$ is equicontinuous,
     \item $\pi$ is maximal, i.e. $\forall \varphi : (X,T) \to (Y,T)$ equicontinuous factor: $R_\pi \subset R_\varphi$.
@@ -12,7 +12,7 @@
 \pause
   \begin{alertblock}{Theorem (Existence and uniqueness of the MEF)}
   Let $(X,T)$ be a TDS.
-  Then $(X,T)$ has a MEF and any two MEF's are equivalent.
+  Then $(X,T)$ has a MEF that is unique up to equivalence.
   \end{alertblock}
   \pause
 \begin{example}[MEF of equicontinuous TDS is trivial]
@@ -25,8 +25,11 @@
   Let $\pi : (X, T) \to  (X_m,T)$ be the MEF.
   Then:
   \begin{equation*}
-    \forall \, \varphi : (X,T) \to (Y,T) \ \text{equicontinuous factor} \ \exists!\tilde{\varphi}: (X_m,T) \to (Y,T): \varphi = \tilde{\varphi} \circ \pi.
-  \end{equation*}
+    \begin{split}
+      &\forall \, \varphi : (X,T) \to (Y,T) \ \text{equicontinuous factor}: \\
+      & \exists!\tilde{\varphi}: (X_m,T) \to (Y,T): \varphi = \tilde{\varphi} \circ \pi.
+    \end{split}
+      \end{equation*}
   \end{proposition}
   \begin{center}
     \begin{tikzcd}[sep=large]
@@ -60,7 +63,7 @@
 \begin{frame}[fragile]
  \begin{definition}[Discrete spectrum]
   \begin{equation*}
-    (X,T) \ \text{has \emph{discrete spectrum}}:\Leftrightarrow C(X) = \overline{\lin} \bigcup_{\chi \in T^*} \ker (U- \chi).
+    (X,T) \ \text{has \textbf{discrete spectrum}}:\Leftrightarrow C(X) = \overline{\lin} \bigcup_{\chi \in T^*} \ker (U- \chi).
   \end{equation*}
 \end{definition}
 \pause 
@@ -145,46 +148,12 @@
     \end{column}
   \end{columns}
   \end{frame}
-\begin{frame}
-  \begin{columns}
-    \begin{column}{0.6\textwidth}
-    \centering
-      \includegraphics[width=8cm]{imgs/torusSkewRot.pdf}
-    \end{column}
-    \begin{column}{0.4\textwidth}
-  \begin{example}[MEF of skew rotation]
-Let $a \in \mathbb{T}$. Homeomorphism:
-\begin{equation*}
-  \begin{split}
-    &\alpha: \mathbb{T}^2 \to \mathbb{T}^2,\\
-  &\alpha (z,w) \coloneq (az,zw).
-  \end{split}
-  \end{equation*}
-     TDS $(\mathbb{T}^2,\mathbb{Z})$, $\mathbb{Z}$-action:
-     \begin{equation*}
-     t \cdot (z,w) \coloneq \alpha^t (z,w).
-     \end{equation*}
-     \pause
-  MEF is 
-  \begin{equation*}
-    \begin{split}
-     &\pr_1 : (\mathbb{T}^2,\mathbb{Z}) \to (\mathbb{T},\mathbb{Z}), \\
-    &\pr_1 (z,w) \coloneq z.
-    \end{split}
-  \end{equation*}
-  $\mathbb{Z}$-action on $\mathbb{T}$:
-  \begin{equation*}
-   t\cdot  z \coloneq a^tz.
-  \end{equation*}
-\end{example}
-       \end{column}
-  \end{columns}
-\end{frame}
 \subsection{Relationship to measure preserving system concepts}
 \begin{frame}{TDS with invariant measure as MPS}
 Let $(X,T)$ a TDS, $T$ abelian, $\mu$ a $T$-invariant probability measure on $X$.
 \begin{itemize}
   \item $(X,T,\mu)$ is a concrete measure preserving system (MPS)
+    \pause
   \item \emph{MPS Koopman operator}
 \begin{equation*}
   \begin{split}
@@ -192,6 +161,7 @@ Let $(X,T)$ a TDS, $T$ abelian, $\mu$ a $T$-invariant probability measure on $X$
     & (V(t) f)(x) \coloneq f (t x). 
   \end{split}
 \end{equation*}
+\pause
 \item
   $(X,T,\mu)$ has \emph{MPS discrete spectrum} if and only if
   \begin{equation*}
@@ -202,14 +172,15 @@ Let $(X,T)$ a TDS, $T$ abelian, $\mu$ a $T$-invariant probability measure on $X$
 \begin{proposition}
   If $(X,T)$ has TDS discrete spectrum, then $(X,T,\mu)$ has MPS discrete spectrum.
   \end{proposition}
-  The converse is false.
 \end{frame}
 \begin{frame}[fragile]{MEF is subsystem of the Kronecker subsystem}
   Let $\pi : (X,T) \to (X_m,T)$ be the MEF of $(X,T)$.
   \begin{itemize}
     \item $(X_m,T, \nu)$ with $\nu(A)\coloneq  \mu(\pi^{-1}(A))$ is concrete MPS with discrete spectrum,
-  \item $\mathcal{X}, \mathcal{X}_m$ the MPS associated to $(X,T,\mu), (X_m,T,\nu)$ and $\pi^* : \mathcal{X}_m \to \mathcal{X}$ the induced extension,
-  \item Let $K: \mathcal{K} \to \mathcal{X}$ the Kronecker subsystem of $\mathcal{X}$,
+      \pause
+  \item $\mathcal{X}, \mathcal{X}_m$ the MPS associated to $(X,T,\mu), (X_m,T,\nu)$ and $\pi^* : \mathcal{X}_m \to \mathcal{X}$ the extension induced by $\pi$,
+\pause
+  \item Let $K: \mathcal{K} \to \mathcal{X}$ the Kronecker subsystem of $\mathcal{X}$ ($K$ is associated to $\clin$,
   \item Kronecker subsystem maximality: $\exists$ extension $J: \mathcal{X}_m \to \mathcal{K}$:
 \end{itemize}
   \begin{center}
