updated mef part

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -70,7 +70,7 @@ style=authoryear,
 
 \newcommand{\clin}{\overline{\lin}}
 
-\title[Maximla Equicontinuous Factor]{Project 8: Maximal Equicontinuous Factor}
+\title[Maximal Equicontinuous Factor]{Project 8: Maximal Equicontinuous Factor}
 \author{Matti Bleckmann, Jannik Daun, Pablo Lummerzheim}
 %\institute{}
 \date{ISEM28, 2025}
