--- a/presentation/sections/mef.tex
+++ b/presentation/sections/mef.tex
@@ -41,7 +41,7 @@
 \end{frame}
 \subsection{Eigenfunction characterisation of the MEF}
 \begin{frame}
-  $(X,T)$ TDS with $T$ abelian, $T^*$ the set of all (continuous) characters of $T$.
+  $(X,T)$ TDS with $T$ abelian, $T^\sharp$ ($T^*$) the set of all (continuous) characters of $T$.
 \begin{definition}[Koopman operator]
   \begin{equation*}
     \begin{split}
@@ -111,7 +111,8 @@
   \begin{columns}[t]
     \begin{column}{0.5\textwidth}
      \begin{itemize}
-    \item $\mathscr{A}\subset C(X)$ smallest $C^*$-algebra containing all eigenfunctions of $U$,
+       \item $\mathscr{A}\coloneq \clin \bigcup_{\chi \in T^*} \ker (U- \chi) \subset C(X)$,
+    \item  $\mathscr{A}$ is smallest $C^*$-subalgebra containing all eigenfunctions of $U$,
     \item $\iota : \mathscr{A} \to C(X)$ natural injection,
       \pause
     \item $\widehat{\phantom{a}}: I \Rightarrow CG$ natural:
@@ -149,24 +150,51 @@
   \end{columns}
   \end{frame}
 \subsection{Relationship to measure preserving system concepts}
+\begin{frame}{MEF vs. Kronecker subsystem}
+  \begin{columns}[t]
+    \begin{column}{0.5\textwidth}
+      $(X,T)$ TDS
+      \begin{itemize}
+              \item \onslide+<2->
+$X$ topological space, $T$ acting by homeomorphisms on $X$,
+        \item \onslide+<3-> Koopman operator $U : T \to L(C(X))$,
+        \item $(X,T)$ has discrete spectrum $\Leftrightarrow \clin \bigcup_{\chi \in T^*} \ker (U- \chi) = C(X)$,
+        \item \onslide<4-> MEF: associated to the $U$-invariant $C^*$-subalgebra
+          \begin{equation*}
+            \clin \bigcup_{\chi \in T^*} \ker (U- \chi)  \subset C(X).
+          \end{equation*}
+      \end{itemize}
+    \end{column}
+\begin{column}{0.5\textwidth}
+  \onslide<1->
+  $(Y,T)$ measure preserving system (MPS)
+  \begin{itemize}
+    \onslide<2->\item $Y$ probability space, $T$ acting on $\Sigma (Y)$ by automorphisms,
+    \item \onslide<3-> Koopman op. $V: T \to L(L^2(Y))$,
+    \item $(Y,T)$ has discrete spectrum $\Leftrightarrow \clin \bigcup_{\chi \in T^\sharp} \ker (V- \chi) = L^2(Y)$,
+    \item \onslide<4-> Kronecker subsystem: associated to the $V$-invariant Markov sublattice 
+      \begin{equation*}
+        \clin \bigcup_{\chi \in T^\sharp} \ker (V- \chi)  \subset L^2(Y).
+      \end{equation*}
+  \end{itemize}
+    \end{column}
+  \end{columns}
+  \onslide<5->
+  \centering
+  \textbf{MEF is the TDS analogue of the Kronecker subsystem!}
+\end{frame}
 \begin{frame}{TDS with invariant measure as MPS}
 Let $(X,T)$ a TDS, $T$ abelian, $\mu$ a $T$-invariant probability measure on $X$.
 \begin{itemize}
-  \item $(X,T,\mu)$ is a concrete measure preserving system (MPS)
+  \item $(X,T,\mu)$ is a concrete measure preserving system,
     \pause
-  \item \emph{MPS Koopman operator}
+  \item MPS Koopman operator
 \begin{equation*}
   \begin{split}
     &V : T \to L(L^2(X)),\\
-    & (V(t) f)(x) \coloneq f (t x). 
+    & (V(t) f)(x) \coloneq f (t x).
   \end{split}
 \end{equation*}
-\pause
-\item
-  $(X,T,\mu)$ has \emph{MPS discrete spectrum} if and only if
-  \begin{equation*}
-    L^2(X) = \clin \bigcup_{\chi \in T^*} \ker (V - \chi).
-  \end{equation*}
 \end{itemize}
 \pause
 \begin{proposition}
@@ -178,9 +206,10 @@ Let $(X,T)$ a TDS, $T$ abelian, $\mu$ a $T$-invariant probability measure on $X$
   \begin{itemize}
     \item $(X_m,T, \nu)$ with $\nu(A)\coloneq  \mu(\pi^{-1}(A))$ is concrete MPS with discrete spectrum,
       \pause
-  \item $\mathcal{X}, \mathcal{X}_m$ the MPS associated to $(X,T,\mu), (X_m,T,\nu)$ and $\pi^* : \mathcal{X}_m \to \mathcal{X}$ the extension induced by $\pi$,
+  \item $\mathcal{X}, \mathcal{X}_m$ the MPS associated to $(X,T,\mu), (X_m,T,\nu)$,
+  \item $\pi^* : \mathcal{X}_m \to \mathcal{X}$ the extension induced by $\pi$,
 \pause
-  \item Let $K: \mathcal{K} \to \mathcal{X}$ the Kronecker subsystem of $\mathcal{X}$ ($K$ is associated to $\clin$,
+  \item Let $K: \mathcal{K} \to \mathcal{X}$ the Kronecker subsystem of $\mathcal{X}$,
   \item Kronecker subsystem maximality: $\exists$ extension $J: \mathcal{X}_m \to \mathcal{K}$:
 \end{itemize}
   \begin{center}
