Added section on Thue Morse subshift in presentation

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -10,7 +10,7 @@
 \usepackage{hyperref}
 \usepackage{amsthm}
 \usepackage{amssymb}
-\usepackage{transparent}
+%\usepackage{transparent}
 \usepackage{siunitx}
 \usepackage{csquotes}
 \usepackage{graphicx}
@@ -94,7 +94,7 @@ style=authoryear,
 \subfile{sections/rpr.tex}
 \subfile{sections/skew-rotation.tex}
 \subfile{sections/meq.tex}
-
+\subfile{sections/thue-morse.tex}
 
 \section*{}
 \begingroup 
